<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="E_TcMatSimDataAreaType" Id="{d82e0b78-c005-4724-8b38-a4aab86ccccd}">
    <Declaration><![CDATA[TYPE E_TcMatSimDataAreaType :
(
	NotSpecified := 0,
	Standard,
	InputSrc,
	InputDst,
	OutputSrc,
	OutputDst,
	InternalDa,
	MArea,
	RetainDa
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>