<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="FB_TcMatSimObject_1" Id="{9f658f10-344c-428c-943c-0cb42b94e223}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_TcMatSimObject_1
VAR_INPUT
	/// set this flag to write FB input values to the TcComObject's input DataAreas. This will overwrite the mapped input values before module execution. Set to FALSE to read the mapped input values from the TcComObject to the FB.
	bWriteFbInputValues: BOOL := TRUE;
END_VAR
VAR
	/// process image src and dst pointers and sizes
	pDataAreas: POINTER TO ST_TcMatSimObjectDataAreaInfo;
	nDataAreas: UDINT;
	/// global interface pointers
	ipObjSrv: ITComObjectServer;
	/// object interface pointers
	ipTcComObj: ITComObject;
	ipTcCyclic: ITcCyclic;
	ipTcPostCyclic: ITcPostCyclic;
	ipTcAdi: ITcADI;
	/// task interface pointers
	ipTask: ITcTask;
	/// initial parameters
	pInitData: POINTER TO TComInitDataHdr;
	/// hResult of interface calls (0 if no error)
	hResult: HRESULT;
	/// module class ID
	moduleClsId: CLSID;
	/// expected/desired module class ID
	assignedClsId: CLSID;
	bClassIdVerified: BOOL;
	/// flag indicating whether the module instance was created dynamically
	bDynInstance: BOOL;
	/// the object state at the time FB_init was called, FB_exit will try to switch to this state (only if this means to shift down)
	eInitialObjState: TCOM_STATE := TCOM_STATE.TCOM_STATE_INIT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="AssignClassId" Id="{8ddb033c-8fce-4464-9cd9-37a33fd67852}">
      <Declaration><![CDATA[METHOD PUBLIC AssignClassId
VAR_INPUT
	clsId : CLSID;
END_VAR
                ]]></Declaration>
      <Implementation>
        <ST><![CDATA[assignedClsId := clsId;
bClassIdVerified := false;
                  ]]></ST>
      </Implementation>
    </Method>
    <Property Name="ClassId" Id="{77c2670f-f7ef-4951-b4d3-d7915e75ab4a}">
      <Declaration><![CDATA[PROPERTY ClassId : CLSID
]]></Declaration>
      <Get Name="Get" Id="{275a3418-aff7-4c25-aa8c-03ac05865a63}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[hResult := ReadModuleClassId();
ClassId := moduleClsId;
                    ]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="Error" Id="{c8a814fd-cc38-469f-889c-d33b47641522}">
      <Declaration><![CDATA[PROPERTY Error : BOOL
]]></Declaration>
      <Get Name="Get" Id="{1f011c84-55ed-415b-97aa-d2bd52d2aa7c}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[Error := FAILED(hResult);]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="ErrorCode" Id="{a1af24f3-1a47-450b-b8f6-f943bdc19212}">
      <Declaration><![CDATA[PROPERTY ErrorCode : HRESULT
]]></Declaration>
      <Get Name="Get" Id="{a156e5d1-3c8b-4333-9a07-c3f92cba0550}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[ErrorCode := hResult;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="Execute" Id="{e09ede2a-c380-4b76-a8a4-eeac82cf3ebe}">
      <Declaration><![CDATA[{attribute 'object_name' := 'Execute'}
METHOD Execute : HRESULT
VAR
	nDaIdx: UDINT;
	pCurDataArea: POINTER TO ST_TcMatSimObjectDataAreaInfo;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
IF (SUCCEEDED(hResult)) THEN
  hResult := VerifyClassId();
END_IF

IF (SUCCEEDED(hResult) AND State<>TCOM_STATE_OP) THEN
  hResult := Tc2_System.E_HRESULTAdsErr.NOTREADY;
END_IF

// get image pointers
IF (SUCCEEDED(hResult)) THEN
  GetImagePtrs(hResult);
END_IF

// copy inputs
IF (pDataAreas<>0 AND bWriteFbInputValues) THEN
  FOR nDaIdx:=0 TO nDataAreas-1 DO
    IF (FAILED(hResult))THEN
      CONTINUE;
    END_IF
    pCurDataArea := pDataAreas + nDaIdx*SIZEOF(ST_TcMatSimObjectDataAreaInfo);
    IF ((pCurDataArea^.eDataAreaType <> E_TcMatSimDataAreaType.InputDst))THEN
      CONTINUE;
    END_IF
    IF (pCurDataArea^.pModuleProcImg<>0 AND pCurDataArea^.pPlcVar<>0) THEN
      MEMCPY(pCurDataArea^.pModuleProcImg,pCurDataArea^.pPlcVar,pCurDataArea^.nSize);
    ELSE
      hResult := Tc2_System.E_HRESULTAdsErr.NOINTERFACE;
    END_IF
  END_FOR
END_IF

// call cycle update
IF (SUCCEEDED(hResult)) THEN
  IF (ipTcCyclic<>0) THEN
    hResult := ipTcCyclic.CycleUpdate(ipTask:= ipTask, ipCaller:= 0, context:= 0);
  ELSE
    hResult := Tc2_System.E_HRESULTAdsErr.NOINTERFACE;
  END_IF
END_IF

// copy outputs
IF (pDataAreas<>0) THEN
  FOR nDaIdx:=0 TO nDataAreas-1 DO
    IF (FAILED(hResult))THEN
      CONTINUE;
    END_IF
    pCurDataArea := pDataAreas + nDaIdx*SIZEOF(ST_TcMatSimObjectDataAreaInfo);
    IF ((pCurDataArea^.eDataAreaType = E_TcMatSimDataAreaType.OutputSrc) OR NOT bWriteFbInputValues) THEN
      IF (pCurDataArea^.pModuleProcImg<>0 AND pCurDataArea^.pPlcVar<>0) THEN
        MEMCPY(pCurDataArea^.pPlcVar,pCurDataArea^.pModuleProcImg,pCurDataArea^.nSize);
      ELSE
        hResult := Tc2_System.E_HRESULTAdsErr.NOINTERFACE;
      END_IF
    END_IF
  END_FOR
END_IF


// call post cyclic update
IF (SUCCEEDED(hResult)) THEN
  IF (ipTcPostCyclic<>0) THEN
    hResult := ipTcPostCyclic.PostCyclicUpdate(ipTask:= 0, ipCaller:= 0, context:= 0);
  ELSE
    hResult := Tc2_System.E_HRESULTAdsErr.NOINTERFACE;
  END_IF
END_IF

ReleaseImagePtrs();

Execute := hResult;
                  ]]></ST>
      </Implementation>
    </Method>
    <Method Name="FB_exit" Id="{47492088-1f3c-4f0a-8b50-4caf1e2eb5ec}">
      <Declaration><![CDATA[{attribute 'object_name' := 'FB_exit'}
METHOD FB_exit : BOOL
VAR_INPUT
	/// Online Change
	bInCopyCode: BOOL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
IF (NOT bInCopyCode) THEN
  IF (ipObjSrv<>0) THEN
    ipObjSrv.TcRelease();
    ipObjSrv := 0;
  END_IF

  ReleaseTcComInterface();
END_IF
                  ]]></ST>
      </Implementation>
    </Method>
    <Method Name="FB_init" Id="{01de1ea7-28f1-4b61-9a5f-2155107407d5}">
      <Declaration><![CDATA[{attribute 'object_name' := 'FB_init'}
METHOD FB_init : BOOL
VAR_INPUT
	/// init retain variables
	bInitRetains: BOOL;
	/// Online Change
	bInCopyCode: BOOL;
	oid: OTCID;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
FB_init := SUCCEEDED(Init(oid));
                  ]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetImagePtrs" Id="{7b0b651b-01c6-4fd8-b509-55be0e044d7d}">
      <Declaration><![CDATA[{attribute 'object_name' := 'GetImagePtrs'}
METHOD PRIVATE GetImagePtrs
VAR_INPUT
	hr: REFERENCE TO HRESULT;
END_VAR
VAR
	nDaIdx: UDINT;
	pCurDataArea: POINTER TO ST_TcMatSimObjectDataAreaInfo;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
IF (ipTcAdi=0) THEN
  hr := Tc2_System.E_HRESULTAdsErr.NOINTERFACE;
END_IF
IF(State<>TCOM_STATE_OP)THEN
  hr := Tc2_System.E_HRESULTAdsErr.INVALIDSTATE;
END_IF


// get pointers to process images
IF (pDataAreas<>0) THEN
  FOR nDaIdx:=0 TO nDataAreas-1 DO
    pCurDataArea := pDataAreas + nDaIdx*SIZEOF(ST_TcMatSimObjectDataAreaInfo);
    IF (FAILED(hr))THEN
      CONTINUE;
    END_IF
    IF ((pCurDataArea^.eDataAreaType <> E_TcMatSimDataAreaType.InputDst) AND (pCurDataArea^.eDataAreaType <> E_TcMatSimDataAreaType.OutputSrc))THEN
      CONTINUE;
    END_IF
    IF (pCurDataArea^.pModuleProcImg=0 AND pCurDataArea^.nSize>0) THEN
      hr := ipTcAdi.GetImagePtr(size:= pCurDataArea^.nSize , offs:=0 , adi_x:=pCurDataArea^.nDataAreaId , ppData:=ADR(pCurDataArea^.pModuleProcImg));
    END_IF
  END_FOR
END_IF

IF (FAILED(hr)) THEN
  ReleaseImagePtrs();
END_IF
                  ]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetObjPara" Id="{456e8ce8-79ff-4d59-9a74-513b0dbe2f5b}">
      <Declaration><![CDATA[{attribute 'object_name' := 'GetObjPara'}
METHOD GetObjPara : HRESULT
VAR_INPUT
	pid: PTCID;
	nData: UDINT;
	pData: PVOID;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
IF (ipTcComObj=0) THEN
  GetObjPara := Tc2_System.E_HRESULTAdsErr.NOINTERFACE;
END_IF

IF (SUCCEEDED(GetObjPara)) THEN
  GetObjPara := ipTcComObj.TcGetObjPara(pid:=pid,nData,pData,0);
END_IF
                  ]]></ST>
      </Implementation>
    </Method>
    <Method Name="Init" Id="{ff971e46-1823-49ab-b79a-828ecb26df70}">
      <Declaration><![CDATA[{attribute 'object_name' := 'Init'}
METHOD PROTECTED Init : HRESULT
VAR_INPUT
	oid: OTCID;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
// preinitialize variables
memset(ADR(moduleClsId),0,SIZEOF(moduleClsId));
bClassIdVerified := FALSE;
hResult := Tc2_System.E_HRESULTAdsErr.HRESULT_ADS_NOERROR;

// get object server
IF (ipObjSrv=0) THEN
  hResult := FW_ObjMgr_GetObjectServer(_AppInfo.ObjId,ADR(ipObjSrv));
END_IF

// try to get object interfaces
IF (SUCCEEDED(hresult)) THEN
  QueryTcComInterface(hResult,oid);
END_IF

// verify class id
IF (SUCCEEDED(hresult)) THEN
  hresult := VerifyClassId();
END_IF

// query interfaces, if the current state is higher than INIT
IF (SUCCEEDED(hresult) AND State>TCOM_STATE.TCOM_STATE_INIT) THEN
  QueryObjInterfaces(hResult);
END_IF

// return value
Init := hresult;
                  ]]></ST>
      </Implementation>
    </Method>
    <Method Name="InitObjName" Id="{52366ca7-d3c4-4917-811d-b58ce3df3faf}">
      <Declaration><![CDATA[{attribute 'object_name' := 'InitObjName'}
METHOD PRIVATE InitObjName
VAR_INPUT
	hr: REFERENCE TO HRESULT;
END_VAR
VAR
	objectName: STRING(255) := 'TempContr_PlcRtFbInstance';
	oid: OTCID;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
IF (SUCCEEDED(hr)) THEN
  hr := ipTcComObj.TcGetObjectId(oid);
END_IF

IF (SUCCEEDED(hr) and bDynInstance) THEN
  objectName := TC2_STANDARD.CONCAT(objectName,'_');
  objectName := TC2_STANDARD.CONCAT(objectName,UDINT_TO_STRING(oid));
  hr := ipTcComObj.TcSetObjectName(ADR(objectName));
END_IF
                  ]]></ST>
      </Implementation>
    </Method>
    <Method Name="Internal_SetObjState" Id="{d12ac5a9-d428-4444-802f-a1b18e8547e5}">
      <Declaration><![CDATA[{attribute 'object_name' := 'Internal_SetObjState'}
METHOD PROTECTED Internal_SetObjState
VAR_INPUT
	hr: REFERENCE TO HRESULT;
	nextState: TCOM_STATE;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
// verify class id
IF (SUCCEEDED(hr)) THEN
  hr := VerifyClassId();
END_IF

// switch object state
IF (SUCCEEDED(hr) AND nextState>=TCOM_STATE_INIT) THEN
  IF (ipTcComObj=0) THEN
    hr := Tc2_System.E_HRESULTAdsErr.NOINTERFACE;
  END_IF
  IF (ipObjSrv=0) THEN
    hr := Tc2_System.E_HRESULTAdsErr.NOINTERFACE;
  END_IF
  IF (SUCCEEDED(hr)) THEN
    hr := ipTcComObj.TcSetObjState(nextState,ipObjSrv,pInitData);
  END_IF
END_IF
                  ]]></ST>
      </Implementation>
    </Method>
    <Method Name="QueryObjInterface" Id="{398fba7c-05ef-4eed-ad96-88117dba4e74}">
      <Declaration><![CDATA[{attribute 'object_name' := 'QueryObjInterface'}
METHOD PRIVATE QueryObjInterface
VAR_INPUT
	hr: REFERENCE TO HRESULT;
	iid: REFERENCE TO IID;
	pipItf: POINTER TO ITcUnknown;
END_VAR
VAR CONSTANT
	pNull: PVOID := 0;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
IF (SUCCEEDED(hr)) THEN
  IF (ipTcComObj=0) THEN
    hr := Tc2_System.E_HRESULTAdsErr.NOINTERFACE;
  ELSIF (pipItf^=ULINT_TO_DWORD(pNull)) THEN
    hr := ipTcComObj.TcQueryInterface(iid:= iid, pipItf:=pipItf);
  END_IF
END_IF
                  ]]></ST>
      </Implementation>
    </Method>
    <Method Name="QueryObjInterfaces" Id="{83312c1c-035c-49e7-a773-f1651189369b}">
      <Declaration><![CDATA[{attribute 'object_name' := 'QueryObjInterfaces'}
METHOD PRIVATE QueryObjInterfaces
VAR_INPUT
	hr: REFERENCE TO HRESULT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
IF(State<TCOM_STATE_PREOP)THEN
  hr := Tc2_System.E_HRESULTAdsErr.INVALIDSTATE;
END_IF

//cyclic interface
QueryObjInterface(hr,IID_ITCCYCLIC,ADR(ipTcCyclic));
//post cyclic interface
QueryObjInterface(hr,IID_ITCPOSTCYCLIC,ADR(ipTcPostCyclic));
//adi interface
QueryObjInterface(hr,IID_ITcADI,ADR(ipTcAdi));
                  ]]></ST>
      </Implementation>
    </Method>
    <Method Name="QueryTcComInterface" Id="{1bdb3e99-cd6a-426c-b122-1e61309ad22c}">
      <Declaration><![CDATA[{attribute 'object_name' := 'QueryTcComInterface'}
METHOD PRIVATE QueryTcComInterface
VAR_INPUT
	hr: REFERENCE TO HRESULT;
	oid: OTCID;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
IF (ipObjSrv=0) THEN
  hr := Tc2_System.E_HRESULTAdsErr.NOINTERFACE;
END_IF

IF (SUCCEEDED(hr) AND ipTcComObj=0) THEN
  bDynInstance := FALSE;
  IF(oid>0) THEN
    // query interface of existing object
    hr := ipObjSrv.TcQueryObjectInterface(oid,IID_ITComObject,ADR(ipTcComObj));
  ELSE
    // create new instance and get the object interface
    hr := ipObjSrv.TcCreateInstance(assignedClsId,IID_ITComObject,ADR(ipTcComObj));
    IF (SUCCEEDED(hr)) THEN
      bDynInstance := TRUE;
      hr := ipTcComObj.TcSetObjectId(OTCID_CreateNewId);
    END_IF
  END_IF
  IF (SUCCEEDED(hr)) THEN
    eInitialObjState := State;
  END_IF
END_IF
                  ]]></ST>
      </Implementation>
    </Method>
    <Method Name="ReadModuleClassId" Id="{ed7494dc-d96c-4897-a186-a387ec078e05}">
      <Declaration><![CDATA[{attribute 'object_name' := 'ReadModuleClassId'}
METHOD PRIVATE ReadModuleClassId : HRESULT
VAR
	emptyClsId: CLSID;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[memset(ADR(emptyClsId),0,SIZEOF(emptyClsId));
IF (memcmp(ADR(moduleClsId),ADR(emptyClsId),SIZEOF(moduleClsId))=0) THEN
  IF (ipTcComObj=0) THEN
    ReadModuleClassId := Tc2_System.E_HRESULTAdsErr.NOINTERFACE;
  END_IF

  //objectClsId := clsid;
  IF (SUCCEEDED(ReadModuleClassId)) THEN
    ReadModuleClassId := ipTcComObj.GetClassId(moduleClsId);
  END_IF
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="ReleaseImagePtrs" Id="{c3229721-d233-4849-b108-e4b597af0e70}">
      <Declaration><![CDATA[{attribute 'object_name' := 'ReleaseImagePtrs'}
METHOD PRIVATE ReleaseImagePtrs : HRESULT
VAR
	nDaIdx: UDINT;
	pCurDataArea: POINTER TO ST_TcMatSimObjectDataAreaInfo;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
IF (ipTcAdi=0) THEN
  ReleaseImagePtrs := Tc2_System.E_HRESULTAdsErr.NOINTERFACE;
END_IF

IF (SUCCEEDED(ReleaseImagePtrs) AND pDataAreas<>0) THEN
  // release pointers to the simulink module process images
  FOR nDaIdx:=0 TO nDataAreas-1 DO
    pCurDataArea := pDataAreas + nDaIdx*SIZEOF(ST_TcMatSimObjectDataAreaInfo);

    IF (pCurDataArea^.pModuleProcImg<>0) THEN
      ipTcAdi.ReleaseImagePtr(pData:=pCurDataArea^.pModuleProcImg);
      pCurDataArea^.pModuleProcImg := 0;
    END_IF
  END_FOR
END_IF
                  ]]></ST>
      </Implementation>
    </Method>
    <Method Name="ReleaseObjInterfaces" Id="{6c133ba3-28e2-41c3-999a-bb942753c1c4}">
      <Declaration><![CDATA[{attribute 'object_name' := 'ReleaseObjInterfaces'}
METHOD PRIVATE ReleaseObjInterfaces : HRESULT
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
// release interface pointers
IF (ipTcCyclic<>0) THEN
  ipTcCyclic.TcRelease();
  ipTcCyclic := 0;
END_IF
IF (ipTcPostCyclic<>0) THEN
  ipTcPostCyclic.TcRelease();
  ipTcPostCyclic := 0;
END_IF
IF (ipTcAdi<>0) THEN
  ipTcAdi.TcRelease();
  ipTcAdi := 0;
END_IF
                  ]]></ST>
      </Implementation>
    </Method>
    <Method Name="ReleaseTcComInterface" Id="{4cc42841-88a7-4c45-98ee-3459b5006b4f}">
      <Declaration><![CDATA[{attribute 'object_name' := 'ReleaseTcComInterface'}
METHOD PRIVATE ReleaseTcComInterface : HRESULT
VAR
	nStateChangeCnt: DINT := 0;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
IF (ipTcComObj<>0) THEN
  WHILE (State>eInitialObjState AND nStateChangeCnt<1000) DO
    State := eInitialObjState;
    nStateChangeCnt := nStateChangeCnt+1;
  END_WHILE
  ReleaseObjInterfaces();
  IF (bDynInstance) THEN
    ReleaseTcComInterface := TC3_MODULE.FW_ObjMgr_DeleteInstance(ADR(ipTcComObj));
  ELSE
    ipTcComObj.TcRelease();
  END_IF
  ipTcComObj := 0;
END_IF
                  ]]></ST>
      </Implementation>
    </Method>
    <Method Name="ResetHresult" Id="{a65c9435-282a-409f-81e2-54e324717078}">
      <Declaration><![CDATA[{attribute 'object_name' := 'ResetHresult'}
METHOD ResetHresult
]]></Declaration>
      <Implementation>
        <ST><![CDATA[hResult := S_OK;]]></ST>
      </Implementation>
    </Method>
    <Method Name="SaveOnlineParametersForInit" Id="{2f3fe145-b83c-4340-aa48-d3f6f4fd1cae}">
      <Declaration><![CDATA[{attribute 'object_name' := 'SaveOnlineParametersForInit'}
METHOD SaveOnlineParametersForInit : HRESULT
VAR
	idx: UINT;
	pInitElemHdr: POINTER TO TComInitDataElmHdr;
	pData: PVOID;
	nData: UDINT;
END_VAR
VAR CONSTANT
	nInitDataAlignment: UDINT := 4;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF (pInitData<>0) THEN
  pInitElemHdr := pInitData + SIZEOF(pInitData^);
  FOR idx:=1 TO pInitData^.uiElmCnt DO
    pData := pInitElemHdr + ULINT_TO_DWORD(SIZEOF(pInitElemHdr^));
    nData := pInitElemHdr^.cbData;
    SaveOnlineParametersForInit := GetObjPara(pInitElemHdr^.indexOffset,nData,pData);
    IF (FAILED(SaveOnlineParametersForInit)) THEN
      RETURN;
    END_IF
    pInitElemHdr := pData + (nInitDataAlignment*((nData + nInitDataAlignment - 1)/nInitDataAlignment));
  END_FOR
ELSE
	SaveOnlineParametersForInit := Tc2_System.E_HRESULTAdsErr.NOTINIT;
END_IF
                  ]]></ST>
      </Implementation>
    </Method>
    <Method Name="SetDataAreaInfo" Id="{c6ce421a-84b7-4356-8fb5-13d4ed1d069f}">
      <Declaration><![CDATA[
METHOD PUBLIC SetDataAreaInfo
VAR_INPUT
  pDataAreas: POINTER TO ST_TcMatSimObjectDataAreaInfo;
  nDataAreas: UDINT;
END_VAR
                ]]></Declaration>
      <Implementation>
        <ST><![CDATA[
THIS^.nDataAreas := nDataAreas;
THIS^.pDataAreas := pDataAreas;
                  ]]></ST>
      </Implementation>
    </Method>
    <Method Name="SetInitDataInfo" Id="{faefe3fc-bd6d-4df8-980f-cfa505b9dc6b}">
      <Declaration><![CDATA[
METHOD PUBLIC SetInitDataInfo
VAR_INPUT
  pInitData : POINTER TO TComInitDataHdr;
END_VAR
                ]]></Declaration>
      <Implementation>
        <ST><![CDATA[this^.pInitData := pInitData;]]></ST>
      </Implementation>
    </Method>
    <Method Name="SetObjPara" Id="{0da481cb-f783-4845-91f9-60bbfadc3209}">
      <Declaration><![CDATA[{attribute 'object_name' := 'SetObjPara'}
METHOD SetObjPara : HRESULT
VAR_INPUT
	pid: PTCID;
	nData: UDINT;
	pData: PVOID;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
IF (ipTcComObj=0) THEN
  SetObjPara := Tc2_System.E_HRESULTAdsErr.NOINTERFACE;
END_IF

IF (SUCCEEDED(SetObjPara)) THEN
  SetObjPara := ipTcComObj.TcSetObjPara(pid:=pid,nData,pData,0);
END_IF
                  ]]></ST>
      </Implementation>
    </Method>
    <Method Name="SetObjState" Id="{4a8689e1-b46d-40be-a48a-785b07b79e8a}">
      <Declaration><![CDATA[{attribute 'object_name' := 'SetObjState'}
METHOD SetObjState : HRESULT
VAR_INPUT
	finalState: TCOM_STATE;
END_VAR
VAR
	bShiftUp: BOOL;
	bShiftDown: BOOL;
	currentState: TCOM_STATE;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
currentState := State;

bShiftUp := finalState>currentState;
bShiftDown := finalState<currentState;

// do not switch up on error
IF (FAILED(hresult)) THEN
  bShiftUp := FALSE;
END_IF
// reset existing error on switching down
IF (bShiftDown) THEN
  ResetHresult();
END_IF

// prepared state switch
CASE currentState OF
  TCOM_STATE_INIT:
    IF(bShiftUp) THEN
      QueryTcComInterface(hResult,0);
      Internal_SetObjState(hResult,TCOM_STATE.TCOM_STATE_PREOP);
      InitObjName(hResult);
    END_IF

  TCOM_STATE_PREOP:
    IF(bShiftUp) THEN
      Internal_SetObjState(hResult,TCOM_STATE.TCOM_STATE_SAFEOP);
      QueryObjInterfaces(hResult);
    ELSIF (bShiftDown) THEN
      Internal_SetObjState(hResult,TCOM_STATE.TCOM_STATE_INIT);
    END_IF

  TCOM_STATE_SAFEOP:
    IF(bShiftUp) THEN
      Internal_SetObjState(hResult,TCOM_STATE.TCOM_STATE_OP);
      QueryObjInterfaces(hResult);
    ELSIF (bShiftDown) THEN
      Internal_SetObjState(hResult,TCOM_STATE.TCOM_STATE_PREOP);
      ReleaseObjInterfaces();
    END_IF


  TCOM_STATE_OP:
    IF (bShiftDown) THEN
      Internal_SetObjState(hResult,TCOM_STATE.TCOM_STATE_SAFEOP);
    END_IF
END_CASE

SetObjState := hResult;
                  ]]></ST>
      </Implementation>
    </Method>
    <Property Name="State" Id="{30cb9862-523e-4872-9a86-5a6b8d1edf38}">
      <Declaration><![CDATA[PROPERTY State : TCOM_STATE
]]></Declaration>
      <Get Name="Get" Id="{1efef4f3-d2d4-4ed6-9d56-a60f3b10d2e5}">
        <Declaration><![CDATA[VAR
	hr: HRESULT := S_OK;
	eObjState: TCOM_STATE;
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[
IF (ipTcComObj<>0) THEN
  hr := ipTcComObj.TcGetObjState(ADR(eObjState));
IF (FAILED(hr)) THEN
  eObjState := TCOM_STATE.TCOM_STATE_INIT;
END_IF
ELSE
  eObjState := TCOM_STATE.TCOM_STATE_INIT;
END_IF
State := eObjState;
                    ]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{17ff7ea8-bd64-4f85-83d2-469e2a204382}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[SetObjState(State);]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Method Name="VerifyClassId" Id="{68a9a41c-701f-4ea5-ad4b-1f19e0c6766a}">
      <Declaration><![CDATA[{attribute 'object_name' := 'VerifyClassId'}
METHOD PRIVATE VerifyClassId : HRESULT
VAR
	emptyClsId: CLSID;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[memset(ADR(emptyClsId),0,SIZEOF(emptyClsId));
IF (bClassIdVerified) THEN
  // class ID was already verified
  VerifyClassId := Tc2_System.E_HRESULTAdsErr.HRESULT_ADS_NOERROR;
ELSIF (memcmp(ADR(assignedClsId),ADR(emptyClsId),SIZEOF(assignedClsId))=0) THEN
  // skip class ID verification if no assignedClsId specified
  VerifyClassId := Tc2_System.E_HRESULTAdsErr.HRESULT_ADS_NOERROR;
ELSE
  // verify class ID
  VerifyClassId := ReadModuleClassId();

  IF (SUCCEEDED(VerifyClassId)) THEN
    IF (memcmp(ADR(assignedClsId),ADR(moduleClsId),SIZEOF(assignedClsId))<>0) THEN
     VerifyClassId := Tc2_System.E_HRESULTAdsErr.INVALIDCLSID;
    END_IF
  END_IF
  bClassIdVerified := SUCCEEDED(VerifyClassId);
END_IF
                  ]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_TcMatSimObject_1">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.AssignClassId">
      <LineId Id="3" Count="1" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.ClassId.Get">
      <LineId Id="3" Count="1" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.Error.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.ErrorCode.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.Execute">
      <LineId Id="3" Count="70" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.FB_exit">
      <LineId Id="3" Count="8" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.FB_init">
      <LineId Id="3" Count="1" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.GetImagePtrs">
      <LineId Id="3" Count="27" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.GetObjPara">
      <LineId Id="3" Count="7" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.Init">
      <LineId Id="3" Count="27" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.InitObjName">
      <LineId Id="3" Count="9" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.Internal_SetObjState">
      <LineId Id="3" Count="17" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.QueryObjInterface">
      <LineId Id="3" Count="7" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.QueryObjInterfaces">
      <LineId Id="3" Count="10" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.QueryTcComInterface">
      <LineId Id="3" Count="21" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.ReadModuleClassId">
      <LineId Id="3" Count="9" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.ReleaseImagePtrs">
      <LineId Id="3" Count="15" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.ReleaseObjInterfaces">
      <LineId Id="3" Count="13" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.ReleaseTcComInterface">
      <LineId Id="3" Count="13" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.ResetHresult">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.SaveOnlineParametersForInit">
      <LineId Id="3" Count="13" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.SetDataAreaInfo">
      <LineId Id="3" Count="2" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.SetInitDataInfo">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.SetObjPara">
      <LineId Id="3" Count="7" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.SetObjState">
      <LineId Id="3" Count="48" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.State.Get">
      <LineId Id="3" Count="9" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.State.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TcMatSimObject_1.VerifyClassId">
      <LineId Id="3" Count="17" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>